@startuml
[*] --> PRELAUNCH
PRELAUNCH: Blink 1 time\nData logging interval: 700 ms\nOxidizer filling start and end\nInjection valve closed\nLower vent valve closed

ARM: Blink 2 times\nData logging interval: 700 ms\nInjection valve closed\nLower vent valve closed

BURN: Blink 3 times\nData logging interval: 200 ms\nEngine on\nLiftoff\nOpen injection valve\nLower vent valve closed

COAST: Blink 4 times\nData logging interval: 200 ms\nEngine off\nIn air\nClose injection valve\nLower vent valve closed

POST_FLIGHT: Blink 7 times\nData logging interval: 700 ms\nOn ground\nInjection valve closed\nOpen lower vent valve

ABORT_COMMAND_RECEIVED: Blink 8 times\nData logging interval: 700 ms\nOn ground\nUmbilical attached\nOpen lower vent valve

ABORT_COMMUNICATION_ERROR: Blink 9 times\nData logging interval: 700 ms\nOn ground\nUmbilical attached\nOpen lower vent valve



PRELAUNCH --> ARM : Arm command received

ARM --> BURN : Launch command received twice
ARM --> ABORT_COMMAND_RECEIVED : Abort command received
ARM --> ABORT_COMMUNICATION_ERROR : Lost heartbeat signal

BURN --> COAST : Wait for 8500 ms
BURN --> ABORT_COMMAND_RECEIVED : Abort command received\nUmbilical failed to detach, failed launch\nClose injection valve

COAST --> POST_FLIGHT : Time in post burn > 10 mins
COAST --> ABORT_COMMAND_RECEIVED : Abort command received\nUmbilical failed to detach, failed launch\nClose injection valve

ABORT_COMMAND_RECEIVED --> PRELAUNCH : Reset avionics command reveceived

ABORT_COMMUNICATION_ERROR -> PRELAUNCH : Reset avionics command reveceived

POST_FLIGHT --> [*]
@enduml